kubernetes/signing-service.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutrient-signing-service
  namespace: nutrient-services
  labels:
    app.kubernetes.io/name: nutrient-signing-service
    app.kubernetes.io/instance: nutrient-signing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nutrient-signing-service
      app.kubernetes.io/instance: nutrient-signing-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nutrient-signing-service
        app.kubernetes.io/instance: nutrient-signing-service
    spec:
      containers:
        - name: nutrient-signing-service
          image: "pspdfkit/signing-service:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: '1'
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
