kubernetes/signing-service.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pspdfkit-signing-service
  namespace: pspdfkit-services
  labels:
    app.kubernetes.io/name: pspdfkit-signing-service
    app.kubernetes.io/instance: pspdfkit-signing-service
spec:
  type: ClusterIP
  ports:
    - port: 6000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pspdfkit-signing-service
    app.kubernetes.io/instance: pspdfkit-signing-service
