kubernetes/signing-service.Ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pspdfkit-signing-service
  namespace: pspdfkit-services
  labels:
    app.kubernetes.io/instance: pspdfkit-signing-service
    app.kubernetes.io/name: pspdfkit-signing-service
  annotations:
    cert-manager.io/cluster-issuer: local-certificate-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/large-client-header-buffers: 4 16k
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-read-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '180'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - signing-service.example.com
      secretName: signing-service-ingress
  rules:
    - host: signing-service.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pspdfkit-signing-service
                port:
                  number: 6000
